--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "canvas-confetti": "^1.9.3",
     "ngx-scrollbar": "^18.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.21.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
